Create twig functions and add example

--- a/laravel-twig/resources/views/index.twig
+++ b/laravel-twig/resources/views/index.twig
@@ -4,4 +4,8 @@
   <div data-server>
     {{ component('my_component', { 'renderSource': 'server' }) }}
   </div>
+
+  <div data-client></div>
+
+  <div data-product-list></div>
 {% endblock %}
